--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,7 +35,7 @@ dependencies = [
     "timm>=1.0.22",
     "torch>=2.9.0",
     "torchvision>=0.24.0",
-    "transformers>=4.57.1",
+    "transformers==4.49.0",
     "uiautomation>=2.0.29",
     "ultralytics==8.3.70",
 ]
